--- a/SYMFONY/templates/repertoire/index.html.twig
+++ b/SYMFONY/templates/repertoire/index.html.twig
@@ -1,107 +1,119 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Répertoire{% endblock %}
+{% block title %}Répertoire
+{% endblock %}
 
 {% block body %}
-{% include "base/nave.html.twig" %}
-    <h1>Répertoire</h1>
+	{% include "base/nave.html.twig" %}
+	{% set titre = "Répertoire" %}
+	{% include "base/blueBar.html.twig" %}
+	<div class="min-height100">
+		<form method="GET" action="{{ path('app_repertoire') }}">
+			<div class="divBtnSend">
+				<select name="searchField" id="searchField" onchange="updateSearchOptions()">
+					<option value="id" {% if searchField == 'id' %} selected {% endif %}>ID</option>
+					<option value="statut" {% if searchField == 'statut' %} selected {% endif %}>Statut</option>
+					<option value="dateForecast" {% if searchField == 'dateForecast' %} selected {% endif %}>Date Prévisionnelle</option>
+					<option value="client" {% if searchField == 'client' %} selected {% endif %}>Client</option>
+					<option value="user" {% if searchField == 'user' %} selected {% endif %}>Utilisateur</option>
+				</select>
 
-    <form method="GET" action="{{ path('app_repertoire') }}">
-        <select name="searchField" id="searchField" onchange="updateSearchOptions()">
-            <option value="id" {% if searchField == 'id' %}selected{% endif %}>ID</option>
-            <option value="statut" {% if searchField == 'statut' %}selected{% endif %}>Statut</option>
-            <option value="dateForecast" {% if searchField == 'dateForecast' %}selected{% endif %}>Date Prévisionnelle</option>
-            <option value="client" {% if searchField == 'client' %}selected{% endif %}>Client</option>
-            <option value="user" {% if searchField == 'user' %}selected{% endif %}>Utilisateur</option>
-        </select>
+				<div id="textSearchDiv">
+					{% if searchField == 'statut' %}
+						<select name="searchValue">
+							<option value="En attente" {% if searchValue == 'En attente' %} selected {% endif %}>En attente</option>
+							<option value="En cours" {% if searchValue == 'En cours' %} selected {% endif %}>En cours</option>
+							<option value="Terminé" {% if searchValue == 'Terminé' %} selected {% endif %}>Terminé</option>
+						</select>
+					{% else %}
+						<input type="text" name="searchValue" id="textSearch" placeholder="Saisir votre recherche..." value="{{ searchValue }}">
+					{% endif %}
+				</div>
 
-        <div id="textSearchDiv">
-            {% if searchField == 'statut' %}
-                <select name="searchValue">
-                    <option value="En attente" {% if searchValue == 'En attente' %}selected{% endif %}>En attente</option>
-                    <option value="En cours" {% if searchValue == 'En cours' %}selected{% endif %}>En cours</option>
-                    <option value="Terminé" {% if searchValue == 'Terminé' %}selected{% endif %}>Terminé</option>
-                </select>
-            {% else %}
-                <input type="text" name="searchValue" id="textSearch" placeholder="Saisir votre recherche..." value="{{ searchValue }}">
-            {% endif %}
+			</div>
+			<div class="divBtnSend">
+				<button type="submit">Rechercher</button>
+			</div>
+		</form>
+		<div class="divBtnSend">
+			<table class="tableListePersonnel">
+				<thead>
+					<tr>
+						<th>{{ knp_pagination_sortable(operations, 'ID', 'id') }}</th>
+						<th>{{ knp_pagination_sortable(operations, 'Statut', 'statut') }}</th>
+						<th>{{ knp_pagination_sortable(operations, 'Date prévisionnelle', 'dateForecast') }}</th>
+						<th>{{ knp_pagination_sortable(operations, 'Client', 'client') }}</th>
+						<th>{{ knp_pagination_sortable(operations, 'Utilisateur', 'user') }}</th>
+						<th>{{ knp_pagination_sortable(operations, 'Rôle', 'roles') }}</th>
+						<th>Description</th>
+					</tr>
+				</thead>
+				<tbody>
+					{% for operation in operations %}
+						<tr>
+							<td>{{ operation.id }}</td>
+							<td>{{ operation.statut }}</td>
+							<td>{{ operation.dateForecast ? operation.dateForecast.format('d/m/Y') : 'N/A' }}</td>
+							<td>{{ operation.client.name }}
+								{{ operation.client.firstname }}</td>
+							<td>
+								{% if operation.user %}
+									{{ operation.user.name }}
+									{{ operation.user.firstname }}
+								{% else %}
+									Non attribué
+								{% endif %}
+							</td>
+							<td>
+								{% if operation.user %}
+									{{ operation.user.roles[0] }}
+								{% else %}
+									Non attribué
+								{% endif %}
+							</td>
+							<td>
+								<a href="{{ path('generate_pdf' , { 'id': operation.id }) }}" target="_blank">Générer PDF</a>
+							</td>
+						</tr>
+					{% endfor %}
+				</tbody>
+			</table>
+
+		</div>
+        <div class="divBtnSend">
+			{{ knp_pagination_render(operations) }}
         </div>
+	</div>
 
-        <button type="submit">Rechercher</button>
-    </form>
+	<script>
+		function updateSearchOptions() {
+var searchField = document.getElementById('searchField').value;
+var searchOptions = document.getElementById('textSearchDiv');
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>{{ knp_pagination_sortable(operations, 'ID', 'id') }}</th>
-                <th>{{ knp_pagination_sortable(operations, 'Statut', 'statut') }}</th>
-                <th>{{ knp_pagination_sortable(operations, 'Date prévisionnelle', 'dateForecast') }}</th>
-                <th>{{ knp_pagination_sortable(operations, 'Client', 'client') }}</th>
-                <th>{{ knp_pagination_sortable(operations, 'Utilisateur', 'user') }}</th>
-                <th>{{ knp_pagination_sortable(operations, 'Rôle', 'roles') }}</th>
-                <th>Description</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for operation in operations %}
-                <tr>
-                    <td>{{ operation.id }}</td>
-                    <td>{{ operation.statut }}</td>
-                    <td>{{ operation.dateForecast ? operation.dateForecast.format('d/m/Y') : 'N/A' }}</td>
-                    <td>{{ operation.client.name }} {{ operation.client.firstname }}</td>
-                    <td>
-                    {% if operation.user %}
-                        {{ operation.user.name }} {{ operation.user.firstname }}
-                    {% else %}
-                        Non attribué
-                    {% endif %}
-                    </td>
-                    <td>
-                    {% if operation.user %}
-                        {{ operation.user.roles[0] }}
-                    {% else %}
-                        Non attribué
-                    {% endif %}
-                    </td>
-                    <td><a href="{{ path('generate_pdf' , { 'id': operation.id }) }}" target="_blank">Générer PDF</a></td>
-                </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+if (searchField === 'statut') { // Supprimer le champ de texte s'il est déjà présent
+searchOptions.innerHTML = '';
 
-    {{ knp_pagination_render(operations) }}
+// Ajouter les options prédéfinies pour le statut
+var predefinedOptions = ['En attente', 'En cours', 'Terminé'];
+var select = document.createElement('select');
+select.name = 'searchValue';
 
-    <script>
-        function updateSearchOptions() {
-            var searchField = document.getElementById('searchField').value;
-            var searchOptions = document.getElementById('textSearchDiv');
+predefinedOptions.forEach(function (option) {
+var optionElement = document.createElement('option');
+optionElement.value = option;
+optionElement.textContent = option;
+select.appendChild(optionElement);
+});
 
-            if (searchField === 'statut') {
-                // Supprimer le champ de texte s'il est déjà présent
-                searchOptions.innerHTML = '';
+searchOptions.appendChild(select);
+} else { // Afficher le champ de texte pour les autres critères
+searchOptions.innerHTML = '<input type="text" name="searchValue" id="textSearch" placeholder="Saisir votre recherche...">';
+}
+}
 
-                // Ajouter les options prédéfinies pour le statut
-                var predefinedOptions = ['En attente', 'En cours', 'Terminé'];
-                var select = document.createElement('select');
-                select.name = 'searchValue';
-
-                predefinedOptions.forEach(function(option) {
-                    var optionElement = document.createElement('option');
-                    optionElement.value = option;
-                    optionElement.textContent = option;
-                    select.appendChild(optionElement);
-                });
-
-                searchOptions.appendChild(select);
-            } else {
-                // Afficher le champ de texte pour les autres critères
-                searchOptions.innerHTML = '<input type="text" name="searchValue" id="textSearch" placeholder="Saisir votre recherche...">';
-            }
-        }
-
-        // Appeler la fonction pour définir les options initiales lors du chargement de la page
-        document.addEventListener('DOMContentLoaded', function() {
-            updateSearchOptions();
-        });
-    </script>
+// Appeler la fonction pour définir les options initiales lors du chargement de la page
+document.addEventListener('DOMContentLoaded', function () {
+updateSearchOptions();
+});
+	</script>
 {% endblock %}
