ajout block title sur page manquante

--- a/SYMFONY/templates/bundles/TwigBundle/Exception/error.html.twig
+++ b/SYMFONY/templates/bundles/TwigBundle/Exception/error.html.twig
@@ -1,4 +1,7 @@
 {% extends "base.html.twig" %}
+{% block title %}
+Error
+{% endblock %}
 
 {% block body %}
 	{% set titre = 'Erreur ' ~ status_code  %}
