--- a/SYMFONY/templates/employe/liste.html.twig
+++ b/SYMFONY/templates/employe/liste.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
-
+{% block title %}
+Liste d'opération
+{% endblock %}
 {% block body %}
 
 {% include "base/nave.html.twig" %}
