--- a/SYMFONY/templates/employe/operation.html.twig
+++ b/SYMFONY/templates/employe/operation.html.twig
@@ -1,5 +1,7 @@
 {% extends "base.html.twig" %}
-
+{% block title %}
+Liste opération
+{% endblock %}
 {% block stylesheets %}
     <link rel="stylesheet" href="{{ asset('css/operation.css') }}">
 {% endblock %}
