ajout style page mdp oublié et réinitialisation

--- a/SYMFONY/templates/security/reset_password_request.html.twig
+++ b/SYMFONY/templates/security/reset_password_request.html.twig
@@ -4,10 +4,11 @@
 {% endblock %}
 
 {% block body %}
-	<section>
-    <h1>Demande de réinitialisation de mot de passe</h1>
+{% set titre = "Demande de réinitialisation de mot de passe" %}
+{% include "base/blueBar.html.twig" %}
+	<section class=" divBtnSend min-height100">
     {{form_start(requestPassForm)}}
-     {{form_row(requestPassForm.email)}}
+     {{form_row(requestPassForm.email,{'attr':{'placeholder':'email.exemple@gmail.com'}})}}
      <button type="submit">Envoyer</button>
     {{form_end(requestPassForm)}}
     </section>
