--- a/SYMFONY/templates/navbar/index.html.twig
+++ b/SYMFONY/templates/navbar/index.html.twig
@@ -4,7 +4,7 @@
     <div class="header-container">
         <div class="site-logo">
             <a class="navbar-logo" href={{ path("home") }}>
-                <img src="{{ asset('image/LOGO.png') }}" alt="Votre Logo">
+                <img src="{{ asset('image/logo-transparent-png.png') }}" alt="Votre Logo">
             </a>
         </div>
 
