--- a/SYMFONY/assets/styles/app.css
+++ b/SYMFONY/assets/styles/app.css
@@ -890,7 +890,8 @@ tr {
 }
 
 .site-logo img {
-  width: 250px;
+  padding-left: 3%;
+  width: 200px;
 }
 
 .mobile-nav {
@@ -1014,12 +1015,32 @@ tr {
 
 /* CSS pour responsive */
 
-@media {
-  
-}
+
 
 @media all and (orientation: portrait){
+  .header-area{
+    height: 10vh;
+  }
 
+
+  .navbar-logo img{
+    width: 300px;
+
+  }
+
+.btnDecouvrir{
+  width: 45%;
+  height: 60px;
+  font-size: 2.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+  .message-titre{
+    margin-top: 150px;
+  }
 
   .site-nav-menu {
       margin-top: -25px;
@@ -1059,6 +1080,7 @@ tr {
       display: block;
       margin-bottom: 0;
       padding: 5px 0;
+      font-size: 3rem;
 
   }
 
@@ -1067,7 +1089,7 @@ tr {
   }
 
   .mobile-nav img{
-    width: 40px;
+    width: 90px;
   }
 
   .mobile-menu {
@@ -1094,7 +1116,140 @@ tr {
     width: 60%;
     /* Ajoutez d'autres styles CSS selon vos besoins */
   }
+
+.image-home img{
+  width: 90%;
+
 }
+
+.logo-why .para-why img{
+  width: 220px;
+}
+
+
+.logo-why .para-why  {
+  width: 45%;
+}
+
+.valeur h1{
+  font-size: 5rem;
+
+}
+
+.presta{
+  font-size: 4rem;
+}
+
+.cardList .flipContainer {
+  width: 50%;
+  height: 550px;
+
+}
+
+.btnDevis{
+  width: 75%;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top:  -10%;
+
+}
+
+.eco-texte{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  margin: 0;
+}
+
+.eco-texte p{
+text-align: justify;
+font-size: 60px;
+}
+
+.devDurable{
+  width: 750px;
+
+}
+
+.eco-image{
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+  margin:10%
+}
+ 
+.commentaire h1{
+
+  font-size: 4rem; 
+  color: rgba(0, 153, 255, 0.856);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 10%;
+ 
+  }
+
+.com-client{
+    padding: 2%;
+    display: flex;
+    flex-direction: column;
+    width: 77%;
+    background-color: rgba(211, 209, 209, 0.308);
+    border-radius: 40px;
+    font-size: 20px;
+    margin-left: 10%;
+    gap: 30px;
+    margin-bottom: 5%;
+   } 
+   
+  .client-icon img{
+    width: 60px;
+    height: 60px;
+  
+  }
+
+
+.note-avis{
+
+  width: 650px;
+  margin-left: 70%;
+
+  }
+  
+
+
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .custom-block,
 .custom-block2 {
@@ -1484,7 +1639,7 @@ height: 100px;
 
 }
 
-.eco-image{
+/* .eco-image{
   margin-top: 5%;
   margin-left: 25%;
   margin-bottom: 5%;
@@ -1492,14 +1647,14 @@ height: 100px;
   display: flex;
   justify-content: space-around;
   align-items: center;
-}
+} */
 
 .eco-texte{
   font-size: 24px;
   display: flex;
   justify-content: start;
   width: 76%;
-  margin-left:12%;
+  margin-left:13%;
   padding: auto;
  
 }
@@ -1509,7 +1664,6 @@ height: 100px;
   font-size: 19px;
   justify-content: space-between;
   align-items: center;
-  padding-right: 5%;
 }
 
 
@@ -1588,26 +1742,20 @@ margin-bottom: 3%;
   height: 150px;
 }
 
-.commentaire h1{
-  font-size: 3rem; 
-  color: rgba(0, 153, 255, 0.856);
- display: flex;
- justify-content: center;
-}
 
-.com-client{
+/* .com-client{
   padding: 2%;
   display: flex;
   flex-direction: column;
   width: 17%;
   background-color: rgba(211, 209, 209, 0.308);
   border-radius: 40px;
-  font-size: 20px;
+  font-size: 20px; */
   
-}
+/* } */
 .client-icon{
-  width: 50px;
-  height: 50px;
+  width: 100px;
+  height: 100px;
 
 }
 
@@ -1621,20 +1769,17 @@ margin-bottom: 3%;
   width: 20vw;
 }
 
-.note-avis{
-width: 100%;
+/* .note-avis{
+width: 100%; */
 
-}
-
+/* } */
+/* 
 .com{
   display: flex;
   justify-content: space-evenly;
   padding-bottom: 5%;
   
-}
-.commentaire{
-  padding-bottom: 5%;
-}
+} */
 
 /* Design réactif */
 
@@ -1688,9 +1833,11 @@ width: 100%;
 .divIntro{
   flex-direction: column;
   height: 100vh;
-
 }
 
+.intro1{
+  font-size: 4rem;
+}
 }
 
 
