--- a/SYMFONY/templates/navbar/index.html.twig
+++ b/SYMFONY/templates/navbar/index.html.twig
@@ -27,13 +27,14 @@
                         <p>Devis</p>
                     </a>
                 </li>
-
+{% if app.user %}
                 <li class="nav-item">
                     <a class="nav-link" href={{ path("app_operation") }}>
                         <img src="{{ asset('image/image_operations.png') }}" alt="Opérations">
                         <p>Opérations</p>
                     </a>
                 </li>
+                 {% endif %}
 
                 <li class="nav-item">
                     <a class="nav-link" href={{ path("app_contact") }}>
