--- a/SYMFONY/templates/stat/index.html.twig
+++ b/SYMFONY/templates/stat/index.html.twig
@@ -8,15 +8,9 @@
 				{{ importmap('importBootstrap') }}
 			{% endblock %}
 		{% endblock %}
-{% block head %}
-
-{% endblock %}
-
 {% block body %}
 {% include "base/nave.html.twig" %}
-
-
-   <div class="operation-table min-height100">
+   <div class="operation-table ">
                 <h2>Chiffre d'Affaires 2024</h2>
                 <table class="tableStat">
                  
@@ -56,11 +50,12 @@
             
             {{ render_chart(chart3) }}
         </div>
+         
         <div class="chart2">
           
             {{ render_chart(chart2) }}
         </div>
-        <div class="chart3">
+       <div class="chart3">
             
             {{ render_chart(chart1) }}
         </div>
