--- a/SYMFONY/templates/stat/index.html.twig
+++ b/SYMFONY/templates/stat/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello StatController!{% endblock %}
+{% block title %}Statistique{% endblock %}
 
 	{% block javascripts %}
     
