--- a/SYMFONY/templates/employe/admin/modifier.html.twig
+++ b/SYMFONY/templates/employe/admin/modifier.html.twig
@@ -7,6 +7,7 @@
 {% include "base/nave.html.twig" %}
     {% set titre = 'Modifier '~user.name~' '~user.firstname %}
     {% include "base/blueBar.html.twig" %}
+    {% include "base/flash.html.twig" %}
     
 
 <div class="formClient min-height100">
